# triss

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: config.yml
app/src/infra/: exceptions.py  schema.py
app/src/scripts/: Oct-04_13_51_02.wmv  motion_detection_demo.py  record_video_by_webcam.py  run_detector_on_webcam.py  run_mmpose_demo_on_webcam.py
app/src/services/: pet_detector.py
